--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,8 +1,8 @@
-aws_region        = "us-west-2"
+aws_region        = "us-middle-99"
 vpc_id            = "vpc-xxxxxxxx"
 subnet_id         = "subnet-xxxxxxxx"
 key_name          = "your-keypair"
-proxy_instance_type = "t3.micro"
+proxy_instance_type = "t9.micro"
 layer1_count      = 10
 layer2_count      = 4
 layer2_private_ips = ["10.0.2.10", "10.0.2.11", "10.0.2.12", "10.0.2.13"]
